✨ feat: Rotas de searchProduct, selectProduct, updateProduct.
