# src/routes.ts
@@ -1,6 +1,13 @@
 import { Router } from "express";
 import { createCompany, loginCompany } from "./controllers/company";
-import { createProduct, listProduct,deleteProduct } from "./controllers/product";
+import {
+    createProduct,
+    listProduct,
+    deleteProduct,
+    updateProduct,
+    selectProduct,
+    searchProduct
+} from "./controllers/product";
 import {
     createUser,
     loginUser,
@@ -23,7 +30,10 @@ router.post("/company/login", loginCompany);
 //Product
 router.post("/product/create", createProduct);
 router.get("/product/list", listProduct);
-router.delete("/product/delete/:id",deleteProduct);
+router.delete("/product/delete/:id", deleteProduct);
+router.put("/product/update/:id",updateProduct);
+router.get("/product/select/:id", selectProduct);
+router.get("/product/search/:name", searchProduct);
 
 
 export { router };
